fixed veritcal content scolling on safari mobile

--- a/app/assets/stylesheets/_layout.sass
+++ b/app/assets/stylesheets/_layout.sass
@@ -1,20 +1,25 @@
-html, body, .page, body > .ember-view
+html, body
   height: 100%
   width: 100%
   margin: 0
   padding: 0
+  overflow: hidden
 
-body.rails-app
-  > .content
+html.rails-app
+  body > .content
     overflow: hidden
     padding-bottom: $footer-height
 
-body.client-app
-  overflow: hidden
-
+html.client-app body
   [draggable]
     +user-select(none)
     cursor: move
+
+  &,
+  > .ember-view,
+  .page
+    width: 100%
+    height: 100%
 
   .page
     position: relative
